--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,9 @@
     <modules>
         <module>service-product</module>
         <module>service-item</module>
+        <module>service-list</module>
+        <module>service-user</module>
+        <module>service-cart</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
